client/src/styles.css
/* You can add global styles to this file, and also import other style files */

._spinner-section-wrapper-outter {
  position: relative;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin-top: -145px;
}

._spinner-section-wrapper-inner {
  width: 70px;
  height: 70px;
  top: 50%;
  margin: 0 auto;
  position: relative;
}

._content-datagrid .pagination {
  margin-top: 0px!important;
}

._content-message {
  color: #ff0000;
}

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

._loader-wrapper {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-top: 145px;
}

._pointer-mouse {
  cursor: pointer;
}

._default-cursor {
  cursor: default!important;
}

._db-card {
  cursor: pointer;
}

._dropdown-item-with-border {
  border-bottom: 1px solid #eaeaea!important;
}

.stack-children .stack-block-label {
  display: none;
}

clr-stack-content .spinner {
  text-indent: -100%;
}

.datagrid-spinner{
  z-index: 1;
}

